// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing home components Movie item should render content 1`] = `
<div
  class="flex space-x-8 max-w-screen-lg w-full"
>
  <iframe
    class="border-gray-800 border flex-shrink-0 rounded-sm"
    height="240"
    src="https://www.youtube.com/embed/test_id"
    title="testing video"
    width="360"
  />
  <div
    class="flex-1"
  >
    <div
      class="flex justify-between w-full"
    >
      <div
        class="w-4/5"
      >
        <h2
          class="text-2xl font-bold"
          data-testid="videoTitle"
        >
          testing video
        </h2>
        <p
          class="text-gray-500"
          data-testid="videoSharedBy"
        >
          Shared by: 
          test@gmail.com
        </p>
      </div>
    </div>
    <p
      class="mt-2 text-lg"
    >
      Description:
    </p>
    <p
      class="movie-description"
      data-testid="videoDescription"
    >
      testing video
    </p>
  </div>
</div>
`;

exports[`testing home components Movie list should render content 1`] = `
<div
  class="flex flex-col items-center pt-8 space-y-8"
>
  <div
    class="flex space-x-8 max-w-screen-lg w-full"
  >
    <iframe
      class="border-gray-800 border flex-shrink-0 rounded-sm"
      height="240"
      src="https://www.youtube.com/embed/test_1"
      title="movie 01"
      width="360"
    />
    <div
      class="flex-1"
    >
      <div
        class="flex justify-between w-full"
      >
        <div
          class="w-4/5"
        >
          <h2
            class="text-2xl font-bold"
            data-testid="videoTitle"
          >
            movie 01
          </h2>
          <p
            class="text-gray-500"
            data-testid="videoSharedBy"
          >
            Shared by: 
            test@example.com
          </p>
        </div>
      </div>
      <p
        class="mt-2 text-lg"
      >
        Description:
      </p>
      <p
        class="movie-description"
        data-testid="videoDescription"
      >
        movie 01 description
      </p>
    </div>
  </div>
  <div
    class="flex space-x-8 max-w-screen-lg w-full"
  >
    <iframe
      class="border-gray-800 border flex-shrink-0 rounded-sm"
      height="240"
      src="https://www.youtube.com/embed/test_2"
      title="movie 02"
      width="360"
    />
    <div
      class="flex-1"
    >
      <div
        class="flex justify-between w-full"
      >
        <div
          class="w-4/5"
        >
          <h2
            class="text-2xl font-bold"
            data-testid="videoTitle"
          >
            movie 02
          </h2>
          <p
            class="text-gray-500"
            data-testid="videoSharedBy"
          >
            Shared by: 
            test@example.com
          </p>
        </div>
      </div>
      <p
        class="mt-2 text-lg"
      >
        Description:
      </p>
      <p
        class="movie-description"
        data-testid="videoDescription"
      >
        movie 02 description
      </p>
    </div>
  </div>
</div>
`;
